--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mini-css-extract-plugin": "^2.6.1",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
+    "tinymce": "^6.1.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
