--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "build": "./node_modules/.bin/ts-standard && ./node_modules/.bin/webpack --config ./client/build/webpack.config.js"
   },
   "devDependencies": {
+    "@tinymce/oxide": "^2.1.1",
     "@types/jquery": "^3.5.14",
     "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.0.0",
     "file-loader": "^6.2.0",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
