--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
   },
   "require": {
     "craftcms/cms": "^4.2.0",
+    "craftcms/html-field": "^2.0.0",
     "php": "^8.0.2"
   },
   "autoload": {
