--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "Spicy Web <plugins@spicyweb.com.au>",
   "license": "MIT",
   "scripts": {
-    "build": "./node_modules/.bin/ts-standard && ./node_modules/.bin/webpack --config ./client/build/webpack.config.js"
+    "build": "./node_modules/.bin/ts-standard && ./node_modules/.bin/webpack"
   },
   "devDependencies": {
     "@tinymce/oxide": "^2.1.1",
@@ -32,8 +32,7 @@
   },
   "ts-standard": {
     "ignore": [
-      "src/resources/**/*.js"
-    ],
-    "project": "client/src/scripts/tsconfig.json"
+      "src/assets/*/dist/**/*.js"
+    ]
   }
 }
