--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "spicyweb/craft-tinymce",
-  "description": "A Craft CMS plugin that adds the TinyMCE editor as a field type.",
+  "description": "Adds the TinyMCE rich text editor as a Craft CMS field type",
   "version": "1.2.0",
   "type": "craft-plugin",
   "keywords": [
