--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
     "rss": "https://github.com/spicywebau/craft-tinymce/commits/1.x.atom"
   },
   "require": {
-    "craftcms/cms": "^4.2.0",
-    "craftcms/html-field": "^2.0.0",
-    "php": "^8.0.2"
+    "craftcms/cms": "^5.0.0-alpha.11",
+    "craftcms/html-field": "^3.0.0-alpha",
+    "php": "^8.2"
   },
   "autoload": {
     "psr-4": {
@@ -44,7 +44,8 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require-dev": {
-    "craftcms/ecs": "dev-main"
+    "craftcms/ecs": "dev-main",
+    "craftcms/rector": "dev-main"
   },
   "config": {
     "allow-plugins": {
