Now released under GPL 3 or later

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "field",
     "tinymce"
   ],
-  "license": "MIT",
+  "license": "GPL-3.0-or-later",
   "authors": [
     {
         "name": "Spicy Web",
